Side bar navigation menu

--- a/index.html
+++ b/index.html
@@ -8,6 +8,23 @@
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
+
+    <div class="sidebar">
+    <div class="logo">EcoAgriTech</div>
+    <ul class="nav">
+      <li><span>📊</span> Dashboard</li>
+      <li><span>🌱</span> Growth</li>
+      <li><span>🧠</span> Irrigation</li>
+      <li><span>⚡</span> Energy</li>
+      <li><span>🪴</span> Garden</li>
+    </ul>
+  </div>
+
+  <div class="main-content">
+    
+  </div>
+
+  <script src="script.js"></script>
   
 </body>
 </html>
