SideBar Navigation Working

--- a/index.html
+++ b/index.html
@@ -10,17 +10,18 @@
 <body>
 
     <div class="sidebar">
-    <div class="logo">EcoAgriTech</div>
+    <div class="logo"><!--EcoAgriTech--></div>
     <ul class="nav">
-      <li><span>📊</span> Dashboard</li>
-      <li><span>🌱</span> Growth</li>
-      <li><span>🧠</span> Irrigation</li>
-      <li><span>⚡</span> Energy</li>
-      <li><span>🪴</span> Garden</li>
+      <li><span>📊</span> DASHBOARD</li>
+      <li><span>🌱</span> GROWTH</li>
+      <li><span>🧠</span> IRRIGATION</li>
+      <li><span>⚡</span> ENERGY</li>
+      <li><span>🪴</span> GARDEN</li>
     </ul>
   </div>
 
   <div class="main-content">
+    
     
   </div>
 
