Layout of the entire Project

--- a/index.html
+++ b/index.html
@@ -1,31 +1,29 @@
-
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>EcoAgriTech Dashboard</title>
-  <link rel="stylesheet" href="styles.css" />
-</head>
-<body>
-
-    <div class="sidebar">
-    <div class="logo"><!--EcoAgriTech--></div>
-    <ul class="nav">
-      <li><span>📊</span> DASHBOARD</li>
-      <li><span>🌱</span> GROWTH</li>
-      <li><span>🧠</span> IRRIGATION</li>
-      <li><span>⚡</span> ENERGY</li>
-      <li><span>🪴</span> GARDEN</li>
-    </ul>
-  </div>
-
-  <div class="main-content">
-    
-    
-  </div>
-
-  <script src="script.js"></script>
-  
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>EcoAgriTech Dashboard</title>
+		<link rel="stylesheet" href="styles.css" />
+	</head>
+	<body>
+			<div class="background-canvas">
+				<div class="sidebar">
+					<div class="logo">
+						<!--EcoAgriTech-->
+					</div>
+					<ul class="nav">
+						<li><span>📊</span> DASHBOARD</li>
+						<li><span>🌱</span> GROWTH</li>
+						<li><span>🧠</span> IRRIGATION</li>
+						<li><span>⚡</span> ENERGY</li>
+						<li><span>🪴</span> GARDEN</li>
+					</ul>
+				</div>
+				<div class="main-content">
+					<!-- Visualization area or content goes here -->
+				</div>
+			</div>
+		<script src="script.js"></script>
+	</body>
 </html>
