Placeholder for each tabs content

--- a/index.html
+++ b/index.html
@@ -21,6 +21,29 @@
 					</ul>
 				</div>
 				<div class="main-content">
+                    <div id="dashboard" class="tab-background active">
+    <h2>Dashboard</h2>
+  </div>
+
+  <!-- Growth background -->
+  <div id="growth" class="tab-background">
+    <h2>Growth</h2>
+  </div>
+
+  <!-- Irrigation background -->
+  <div id="irrigation" class="tab-background">
+    <h2>Irrigation</h2>
+  </div>
+
+  <!-- Energy background -->
+  <div id="energy" class="tab-background">
+    <h2>Energy</h2>
+  </div>
+
+  <!-- Garden background -->
+  <div id="garden" class="tab-background">
+    <h2>Garden</h2>
+  </div>
 					<!-- Visualization area or content goes here -->
 				</div>
 			</div>
