Card placeholder but need futher-refinment

--- a/index.html
+++ b/index.html
@@ -7,46 +7,113 @@
 		<link rel="stylesheet" href="styles.css" />
 	</head>
 	<body>
-			<div class="background-canvas">
-				<div class="sidebar">
-					<div class="logo">
-						<!--EcoAgriTech-->
-					</div>
-					<ul class="nav">
-						<li><span>📊</span> DASHBOARD</li>
-						<li><span>🌱</span> GROWTH</li>
-						<li><span>🧠</span> IRRIGATION</li>
-						<li><span>⚡</span> ENERGY</li>
-						<li><span>🪴</span> GARDEN</li>
-					</ul>
+		<div class="background-canvas">
+			<div class="sidebar">
+				<div class="logo">
+					<!--EcoAgriTech-->
 				</div>
-				<div class="main-content">
-                    <div id="dashboard" class="tab-background active">
-    <h2>Dashboard</h2>
-  </div>
-
-  <!-- Growth background -->
-  <div id="growth" class="tab-background">
-    <h2>Growth</h2>
-  </div>
-
-  <!-- Irrigation background -->
-  <div id="irrigation" class="tab-background">
-    <h2>Irrigation</h2>
-  </div>
-
-  <!-- Energy background -->
-  <div id="energy" class="tab-background">
-    <h2>Energy</h2>
-  </div>
-
-  <!-- Garden background -->
-  <div id="garden" class="tab-background">
-    <h2>Garden</h2>
-  </div>
-					<!-- Visualization area or content goes here -->
-				</div>
+				<ul class="nav">
+					<li><span>📊</span> DASHBOARD</li>
+					<li><span>🌱</span> GROWTH</li>
+					<li><span>🧠</span> IRRIGATION</li>
+					<li><span>⚡</span> ENERGY</li>
+					<li><span>🪴</span> GARDEN</li>
+				</ul>
 			</div>
+			<div class="main-content">
+
+				<!-- Dashboard -->
+				<div id="dashboard" class="tab-background active">
+					<h2>Dashboard</h2>
+					<div class="card-layout">
+						<div class="card big-card">
+							<div class="graph-placeholder"></div>
+						</div>
+						<div class="small-cards">
+							<div class="card"></div>
+							<div class="card"></div>
+							<div class="card"></div>
+							<div class="card"></div>
+							<div class="card"></div>
+							<div class="card"></div>
+						</div>
+					</div>
+				</div>
+
+				<!-- Growth -->
+				<div id="growth" class="tab-background">
+					<h2>Growth</h2>
+					<div class="card-layout">
+						<div class="card big-card">
+							<div class="graph-placeholder"></div>
+						</div>
+						<div class="small-cards">
+							<div class="card"></div>
+							<div class="card"></div>
+							<div class="card"></div>
+							<div class="card"></div>
+							<div class="card"></div>
+							<div class="card"></div>
+						</div>
+					</div>
+				</div>
+
+				<!-- Irrigation -->
+				<div id="irrigation" class="tab-background">
+					<h2>Irrigation</h2>
+					<div class="card-layout">
+						<div class="card big-card">
+							<div class="graph-placeholder"></div>
+						</div>
+						<div class="small-cards">
+							<div class="card"></div>
+							<div class="card"></div>
+							<div class="card"></div>
+							<div class="card"></div>
+							<div class="card"></div>
+							<div class="card"></div>
+						</div>
+					</div>
+				</div>
+
+				<!-- Energy -->
+				<div id="energy" class="tab-background">
+					<h2>Energy</h2>
+					<div class="card-layout">
+						<div class="card big-card">
+							<div class="graph-placeholder"></div>
+						</div>
+						<div class="small-cards">
+							<div class="card"></div>
+							<div class="card"></div>
+							<div class="card"></div>
+							<div class="card"></div>
+							<div class="card"></div>
+							<div class="card"></div>
+						</div>
+					</div>
+				</div>
+
+				<!-- Garden -->
+				<div id="garden" class="tab-background">
+					<h2>Garden</h2>
+					<div class="card-layout">
+						<div class="card big-card">
+							<div class="graph-placeholder"></div>
+						</div>
+						<div class="small-cards">
+							<div class="card"></div>
+							<div class="card"></div>
+							<div class="card"></div>
+							<div class="card"></div>
+							<div class="card"></div>
+							<div class="card"></div>
+						</div>
+					</div>
+				</div>
+
+			</div>
+		</div>
 		<script src="script.js"></script>
 	</body>
 </html>
