--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>EcoAgriTech Dashboard</title>
 		<link rel="stylesheet" href="styles.css" />
+		<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
 	</head>
 	<body>
 		<div class="background-canvas">
@@ -24,8 +26,33 @@
 
 				<!-- Dashboard -->
 				<div id="dashboard" class="tab-background active">
-					
-				</div>
+				
+				<canvas id="monitoringChart"></canvas>
+
+			<div class="cards">
+					<div class="card">
+					<h3>🌡️ Temperature</h3>
+					<p class="value">21°C</p>
+					<p class="subtext">Stable, slight drop tomorrow</p>
+					</div>
+					<div class="card">
+					<h3>💧 Soil Moisture</h3>
+					<p class="value">55%</p>
+					<p class="subtext">Healthy range for crops</p>
+					</div>
+					<div class="card">
+					<h3>🚰 Water Usage</h3>
+					<p class="value">40 L</p>
+					<p class="subtext">Irrigation efficiency improving</p>
+					</div>
+					<div class="card">
+						<h3>⚡ Electricity</h3>
+						<p class="value">30 kWh</p>
+						<p class="subtext">Within expected levels</p>
+					</div>
+				</div>	
+
+			</div>
 
 				<!-- Growth -->
 				<div id="growth" class="tab-background">
