--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 		<title>EcoAgriTech Dashboard</title>
 		<link rel="stylesheet" href="styles.css" />
 		<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+		<script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-annotation@4.0.0"></script>
+		<script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-annotation@4.0.0"></script>
 
 	</head>
 	<body>
