--- a/index.html
+++ b/index.html
@@ -58,7 +58,36 @@
 
 				<!-- Growth -->
 				<div id="growth" class="tab-background">
-					<h2>Growth</h2>
+					 <h2>Soil Growth Analytics</h2>
+
+  <div class="chart-wrapper">
+    <button id="soilPrevBtn">⬅️</button>
+    <canvas id="soilChart" width="900" height="250"></canvas>
+    <button id="soilNextBtn">➡️</button>
+  </div>
+
+  <div class="cards">
+    <div class="card">
+      <h3>💧 Current Moisture</h3>
+      <p class="value">55%</p>
+      <p class="subtext">Optimal for crop growth</p>
+    </div>
+    <div class="card">
+      <h3>🌱 Soil pH</h3>
+      <p class="value">6.8</p>
+      <p class="subtext">Slightly acidic, ideal range</p>
+    </div>
+    <div class="card">
+      <h3>🪴 Nutrient Levels</h3>
+      <p class="value">Balanced</p>
+      <p class="subtext">Nitrogen & Phosphorus sufficient</p>
+    </div>
+    <div class="card">
+      <h3>📈 Moisture Trend</h3>
+      <p class="value">Stable ↑</p>
+      <p class="subtext">Maintained by irrigation</p>
+    </div>
+  </div>
 					
 				</div>
 
