--- a/index.html
+++ b/index.html
@@ -99,7 +99,56 @@
 
 				<!-- Energy -->
 				<div id="energy" class="tab-background">
-					<h2>Energy</h2>
+					<h2>Energy Analytics</h2>
+
+  <div class="chart-wrapper">
+    <button id="energyPrevBtn">⬅️</button>
+    <canvas id="energyChart" width="900" height="250"></canvas>
+    <button id="energyNextBtn">➡️</button>
+  </div>
+
+  <div class="cards">
+    <div class="card">
+      <h3>🌬️ Wind Energy Generated</h3>
+      <p class="value">120 kWh</p>
+      <p class="subtext">Expected: 150 kWh</p>
+    </div>
+    <div class="card">
+      <h3>☀️ Solar Energy Generated</h3>
+      <p class="value">80 kWh</p>
+      <p class="subtext">Expected: 100 kWh</p>
+    </div>
+    <div class="card">
+      <h3>🌡️ Max Temperature</h3>
+      <p class="value">35°C</p>
+      <p class="subtext">Peak temperature of the day</p>
+    </div>
+    <div class="card">
+      <h3>💨 Max Wind Speed</h3>
+      <p class="value">25 m/s</p>
+      <p class="subtext">Peak wind speed of the day</p>
+    </div>
+    <div class="card">
+      <h3>🔋 Battery Health</h3>
+      <p class="value">95%</p>
+      <p class="subtext">System performing optimally</p>
+    </div>
+    <div class="card">
+      <h3>⚡ Available Power</h3>
+      <p class="value">200 kWh</p>
+      <p class="subtext">Power ready for consumption</p>
+    </div>
+    <div class="card">
+      <h3>🕒 Energy Storage Level</h3>
+      <p class="value">65%</p>
+      <p class="subtext">Current battery storage</p>
+    </div>
+    <div class="card">
+      <h3>📊 Efficiency</h3>
+      <p class="value">88%</p>
+      <p class="subtext">Energy conversion efficiency</p>
+    </div>
+  </div>
 					
 				</div>
 
