Max Temperature and Max Wind to Avergae instead

--- a/index.html
+++ b/index.html
@@ -119,14 +119,14 @@
       <p class="subtext">Expected: 100 kWh</p>
     </div>
     <div class="card">
-      <h3>🌡️ Max Temperature</h3>
+      <h3>🌡️ Avg Temperature</h3>
       <p class="value">35°C</p>
-      <p class="subtext">Peak temperature of the day</p>
+      <p class="subtext">average temperature of the day</p>
     </div>
     <div class="card">
-      <h3>💨 Max Wind Speed</h3>
+      <h3>💨 Avg Wind Speed</h3>
       <p class="value">25 m/s</p>
-      <p class="subtext">Peak wind speed of the day</p>
+      <p class="subtext">Average wind speed of the day</p>
     </div>
     <div class="card">
       <h3>🔋 Battery Health</h3>
