Irragation Tab working by fixing both css, html and js

--- a/index.html
+++ b/index.html
@@ -93,39 +93,38 @@
 
 				<!-- Irrigation -->
 				<div id="irrigation" class="tab-background">
-					<div id="irrigation" class="tab-background">
-  <h2>Irrigation Analytics</h2>
+
+					<h2>Irrigation Analytics</h2>
 
   <div class="chart-wrapper">
     <button id="irrigPrevBtn">⬅️</button>
-    <canvas id="waterChart" width="450" height="250"></canvas>
-    <canvas id="energyUsageChart" width="450" height="250"></canvas>
+    <canvas id="irrigationChart" width="900" height="250"></canvas>
     <button id="irrigNextBtn">➡️</button>
   </div>
 
   <div class="cards">
     <div class="card">
-      <h3>💧 Expected Total Water Usage</h3>
-      <p class="value">350 L</p>
-      <p class="subtext">Based on current irrigation plan</p>
+      <h3>🚰 Total Water Usage</h3>
+      <p class="value">320 L</p>
+      <p class="subtext">Expected today</p>
     </div>
     <div class="card">
-      <h3>⚡ Expected Total Energy Usage</h3>
+      <h3>⚡ Total Energy Usage</h3>
       <p class="value">45 kWh</p>
-      <p class="subtext">Irrigation system consumption</p>
+      <p class="subtext">During irrigation</p>
     </div>
     <div class="card">
-      <h3>🕒 Next Irrigation Time</h3>
-      <p class="value">14:00 – 16:00</p>
-      <p class="subtext">Scheduled for today</p>
+      <h3>🕒 Next Irrigation</h3>
+      <p class="value">14:00 - 15:00</p>
+      <p class="subtext">Scheduled time</p>
     </div>
     <div class="card">
-      <h3>⏱️ Irrigation Delay</h3>
-      <p class="value">1 hr</p>
-      <p class="subtext">Expected Rainfall, irrigation paused</p>
+      <h3>🌧️ Delay Notice</h3>
+      <p class="value">Expected Rainfall</p>
+      <p class="subtext">Irrigation paused</p>
     </div>
   </div>
-					
+										
 				</div>
 
 				<!-- Energy -->
