--- a/index.html
+++ b/index.html
@@ -184,7 +184,34 @@
 
 				<!-- Garden -->
 				<div id="garden" class="tab-background">
-					<h2>Garden</h2>
+					 <h2>Garden Monitoring</h2>
+
+  <div class="garden-wrapper">
+    <canvas id="gardenCanvas" width="500" height="400"></canvas>
+  </div>
+
+  <div class="cards">
+    <div class="card">
+      <h3>🌱 Non-Active Sensors</h3>
+      <p class="value">B1, D3</p>
+      <p class="subtext">Needs Maintenance</p>
+    </div>
+    <div class="card">
+      <h3>📡 Active Sensors</h3>
+      <p class="value">12 / 15</p>
+      <p class="subtext">Online</p>
+    </div>
+    <div class="card">
+      <h3>💧 Moisture Alerts</h3>
+      <p class="value">C2, A3</p>
+      <p class="subtext">Below Threshold</p>
+    </div>
+    <div class="card">
+      <h3>🔋 Low Battery</h3>
+      <p class="value">C1</p>
+      <p class="subtext">Battery < 20%</p>
+    </div>
+  </div>
 					
 				</div>
 
