Fiexed the chart sizing of all other tabs (Energy, Irrigarion)

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 					<h2>Irrigation Analytics</h2>
 
   <div class="chart-wrapper">
-    <canvas id="irrigationChart" width="900" height="250"></canvas>
+  <canvas id="irrigationChart"></canvas>
     
   </div>
 
@@ -131,7 +131,7 @@
 					<h2>Energy Analytics</h2>
 
   <div class="chart-wrapper">
-    <canvas id="energyChart" width="900" height="250"></canvas>
+  <canvas id="energyChart"></canvas>
     
   </div>
 
