All tabs working

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 					 <h2>Garden Monitoring</h2>
 
   <div class="garden-wrapper">
-    <canvas id="gardenCanvas" width="600" height="200" style="width:100%; height:100%;"></canvas>
+  <canvas id="gardenCanvas" width="900" height="350"></canvas>
   </div>
 
   <div class="cards">
