Hide Energy tabs and all charts related to it

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <li><span>📊</span> DASHBOARD</li>
           <li><span>🌱</span> GROWTH</li>
           <li><span>🧠</span> IRRIGATION</li>
-          <li><span>⚡</span> ENERGY</li>
+          <!-- <li><span>⚡</span> ENERGY</li> -->
           <li><span>🪴</span> GARDEN</li>
         </ul>
       </div>
@@ -44,11 +44,13 @@
               <p class="value">40 L</p>
               <p class="subtext">Irrigation efficiency improving</p>
             </div>
+            <!--
             <div class="card">
               <h3>⚡ Electricity</h3>
               <p class="value">30 kWh</p>
               <p class="subtext">Within expected levels</p>
             </div>
+            -->
           </div>
         </div>
         <!-- Growth -->
@@ -109,7 +111,8 @@
             </div>
           </div>
         </div>
-        <!-- Energy -->
+        <!-- Energy tab and analytics hidden -->
+        <!--
         <div id="energy" class="tab-background">
           <h2>Energy Analytics</h2>
           <div class="chart-wrapper">
@@ -158,6 +161,7 @@
             </div>
           </div>
         </div>
+        -->
         <!-- Garden -->
         <div id="garden" class="tab-background">
           <h2>Garden Monitoring</h2>
